fix bug input exlorer on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10963,7 +10963,7 @@ strong {
     background-color: #F6F8FA;
     border: 1px solid #EFEFEF;
     height: 40px;
-    line-height: 50px;
+    line-height: 40px;
     padding-left: 15px;
     font-size: 10px;
   }
