--- a/resources/sass/_mobile.scss
+++ b/resources/sass/_mobile.scss
@@ -293,7 +293,7 @@
                 background-color: #F6F8FA;
                 border: 1px solid #EFEFEF;
                 height: 40px;
-                line-height: 50px;
+                line-height: 40px;
                 padding-left: 15px;
                 font-size: 10px;
             }
